--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@szmarczak/http-timer": "^5.0.1",
     "axios": "^0.24.0",
