--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "rameter",
-  "version": "0.9.1",
-  "description": "",
+  "version": "0.10.0",
+  "description": "With Ramter, you can write some simple nodejs script to implement load test.",
   "type": "module",
-  "main": "dist/main.js",
+  "main": "./dist/main.js",
+  "types": "./dist/types/main.d.js",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc",
@@ -20,7 +21,7 @@
     "test",
     "testing"
   ],
-  "author": "",
+  "author": "airicyu",
   "license": "MIT",
   "dependencies": {
     "@szmarczak/http-timer": "^5.0.1",
@@ -38,7 +39,6 @@
     "@types/socket.io": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
-    "dotenv": "^11.0.0",
     "eslint": "^8.6.0",
     "jest": "^27.4.7",
     "rimraf": "^3.0.2",
