--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "strict": true,
     "sourceMap": true,
     "moduleResolution": "node",
-    // "declaration": true,
-    // "declarationDir": "dist/types",
+    "declaration": true,
+    "declarationDir": "dist/types",
     "outDir": "dist",
     "typeRoots": [
       "./node_modules/@types", "./src/types"
