--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rameter",
   "version": "0.10.0",
-  "description": "With Ramter, you can write some simple nodejs script to implement load test.",
+  "description": "With Rameter, you can write load test with simple NodeJS scripts!",
   "type": "module",
   "main": "./dist/main.js",
   "types": "./dist/types/main.d.js",
