--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "rameter",
-  "version": "0.11.0",
+  "version": "0.12.0",
   "description": "With Rameter, you can write load test with simple NodeJS scripts!",
+  "author": "airicyu",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/airicyu/rameter"
+  },
   "main": "./dist/main.js",
   "types": "./dist/types/main.d.js",
   "scripts": {
@@ -13,6 +18,9 @@
     "test": "jest --coverage",
     "test:watch": "jest --watch"
   },
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "keywords": [
     "load test",
     "performance test",
@@ -21,7 +29,6 @@
     "test",
     "testing"
   ],
-  "author": "airicyu",
   "license": "MIT",
   "dependencies": {
     "@szmarczak/http-timer": "^5.0.1",
