should remove the process.exit(0) when master down, which would stop process running
also fix samples code

--- a/samples/sample1-hello-world/package.json
+++ b/samples/sample1-hello-world/package.json
@@ -9,6 +9,9 @@
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "rameter": "^0.12.2"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
