--- a/samples/sample4-interactive-scenario/package.json
+++ b/samples/sample4-interactive-scenario/package.json
@@ -11,5 +11,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "rameter": "^0.12.2"
+  }
 }
