--- a/samples/sample8-node-context/workerNode/package.json
+++ b/samples/sample8-node-context/workerNode/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "pm2": "^5.1.2"
+    "pm2": "^5.1.2",
+    "rameter": "^0.12.2"
   }
 }
